--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -27,7 +27,16 @@
   tweetCreateFormElement.addEventListener("submit", handleTweetCreateFormDidSubmit)
   function handleTweetCreateFormDidSubmit(event) {
     event.preventDefault()
-    console.log(event)
+    const myForm = event.target
+    const myFromData = new FormData(myForm)
+    const url = myForm.getAttribute("action")
+    const method = myForm.getAttribute("method")
+    const xhr = new XMLHttpRequest()
+    xhr.open(method, url)
+    xhr.onload = function() {
+      const serverResponse = xhr.response
+    }
+    xhr.send(myFromData)
   }
 
 
