--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -12,7 +12,7 @@
     <form action="create-tweet/" id="tweet-create-form" method="POST" class="form">
       {% csrf_token %}
       <input type="hidden" value="/" name="next" />
-      <textarea class="form-control" name="content" placeholder="Your tweet..."></textarea>
+      <textarea required="required" class="form-control" name="content" placeholder="Your tweet..."></textarea>
       <button type="submit" class="btn btn-primary">Tweet</button>
     </form>
   </div>
@@ -41,7 +41,9 @@
       if (xhr.status === 201) {
         const newTweet = xhr.response
         const newTweetElement = formatTweetElement(newTweet)
-        console.log(newTweetElement)  
+        const ogHtml = tweetsContainerElement.innerHTML
+        tweetsContainerElement.innerHTML = newTweetElement + ogHtml
+        myForm.reset()
       }
     }
     xhr.send(myFromData)
