--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -11,6 +11,7 @@
   <div class="col-md-4 col-10 mx-auto">
     <form action="create-tweet/" id="tweet-create-form" method="POST" class="form">
       {% csrf_token %}
+      <div class="d-none alert alert-danger" id="tweet-create-form-error"></div>
       <input type="hidden" value="/" name="next" />
       <textarea required="required" class="form-control" name="content" placeholder="Your tweet..."></textarea>
       <button type="submit" class="btn btn-primary">Tweet</button>
@@ -23,6 +24,15 @@
 </div>
 
 <script>
+  function handleTweetFormError(msg, display){
+    var myErrorDiv = document.getElementById("tweet-create-form-error")
+    if (display === true){
+      myErrorDiv.setAttribute("class", "d-block alert alert-danger")
+      myErrorDiv.innerText = msg
+    }
+  }
+
+
   const tweetCreateFormElement = document.getElementById("tweet-create-form")
   tweetCreateFormElement.addEventListener("submit", handleTweetCreateFormDidSubmit)
   function handleTweetCreateFormDidSubmit(event) {
@@ -46,7 +56,18 @@
         myForm.reset()
       }else if (xhr.status === 400){
         const errorJson = xhr.response
-        alert(errorJson.content)
+        const contentError = errorJson.content
+        let contentErrorMsg;
+        if (contentError){
+          contentErrorMsg = contentError[0]
+          if (contentErrorMsg){
+            handleTweetFormError(contentErrorMsg, true)
+          }else {
+          alert("An error occured, Please try again.")
+          }
+        }else {
+          alert("An error occured, Please try again.")
+        }
       }else if (xhr.status === 500){
         alert("There was a server error, please try again later.")
       }
