--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -68,6 +68,9 @@
         }else {
           alert("An error occured, Please try again.")
         }
+      }else if (xhr.status === 401){
+        alert("You need to login first!")
+        window.location.href = "/login"
       }else if (xhr.status === 500){
         alert("There was a server error, please try again later.")
       }
