--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -89,7 +89,7 @@
     xhr.open(method, url)
     xhr.onload = function() {
       const serverResponse = xhr.response
-      const listedItems = serverResponse.response
+      const listedItems = serverResponse
       let finalTweetStr = ""
       for (let i=0; i < listedItems.length; i++)
       {
