--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -71,6 +71,9 @@
       }else if (xhr.status === 401){
         alert("You need to login first!")
         window.location.href = "/login"
+      }else if (xhr.status === 403){
+        alert("You need to login first!")
+        window.location.href = "/login"
       }else if (xhr.status === 500){
         alert("There was a server error, please try again later.")
       }
