--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -24,6 +24,21 @@
 </div>
 
 <script>
+  function getCookie(name) {
+    let cookieValue = null;
+    if (document.cookie && document.cookie !== '') {
+        const cookies = document.cookie.split(';');
+        for (let i = 0; i < cookies.length; i++) {
+            const cookie = cookies[i].trim();
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+            }
+        }
+    }
+    return cookieValue;
+  }
   function handleTweetFormError(msg, display){
     var myErrorDiv = document.getElementById("tweet-create-form-error")
     if (display === true){
@@ -103,33 +118,45 @@
     }
     xhr.send()
   }
-  function handleDidLike(tweet_id, currentCount){
-    console.log(tweet_id, currentCount)
+  function handleActionBtn(tweet_id, currentCount, action){
     const url = "/api/tweets/action"
     const method = "POST"
     const data = JSON.stringify({
       id: tweet_id,
-      action: "like"
+      action: action
     })
-    const xht = new XMLHttpRequest
+    const xhr = new XMLHttpRequest
+    const csrftoken = getCookie('csrftoken')
     xhr.open(method, url)
     xhr.setRequestHeader("Content-Type", "application/json")
     xhr.setRequestHeader("HTTP_X_REQUESTED_WITH", "XMLHttpRequest")
     xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest")
+    xhr.setRequestHeader("X-CSRFToken", csrftoken)
     xhr.onload = function(){
-      console.log(xhr.status, xhr.response)
+      loadTweets(tweetsContainerElement)
     }
     xhr.send(data)
     return
   }
   function LikeBtn(tweet){
-    return "<button class='btn btn-primary' onclick=handleDidLike(" + 
-    tweet.id + "," + tweet.likes + ")>" + tweet.likes + " Likes</button>"
+    return "<button class='btn btn-outline-primary' onclick=handleActionBtn(" + 
+    tweet.id + "," + tweet.likes +",'like')>" + tweet.likes + " Likes</button>"
+  }
+  function UnLikeBtn(tweet){
+    return "<button class='btn btn-outline-primary' onclick=handleActionBtn(" + 
+    tweet.id + "," + tweet.likes +",'unlike')>UnLike</button>"
+  }
+  function RetweetBtn(tweet){
+    return "<button class='btn btn-outline-success' onclick=handleActionBtn(" + 
+    tweet.id + "," + tweet.likes +",'retweet')>Retweet</button>"
   }
   function formatTweetElement(tweet){
     let formatedTweet = "<div class='col-12 col-md-10 mx-auto border rounded py-3 mb-4' id='tweet-" + tweet.id 
     + "'>" + "<p>Tweet: " + tweet.content + 
-      "</p><div class='btn-group'>" + LikeBtn(tweet) +
+      "</p><div class='btn-group'>"
+        + LikeBtn(tweet)
+        + UnLikeBtn(tweet)
+        + RetweetBtn(tweet) +
       "</div></div>"
     return formatedTweet
   }
