--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -7,7 +7,9 @@
   </div>
 </div>
 
-<div class="row mb-3">
+
+
+<div class="row mb-3 d-none">
   <div class="col-md-4 col-10 mx-auto">
     <form action="api/tweets/create/" id="tweet-create-form" method="POST" class="form">
       {% csrf_token %}
@@ -19,7 +21,7 @@
   </div>
 </div>
 
-<div class="row" id="tweets">
+<div class="row d-none" id="tweets">
   Loding...
 </div>
 
