--- a/templates/components/form.html
+++ b/templates/components/form.html
@@ -1,5 +1,5 @@
 <form action="" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-secondary">Save</button>
+    <button type="submit" class="btn btn-success">{% if btn_lable %} {{ btn_lable }} {% else %} Save {% endif %}</button>
 </form>
