--- a/templates/react/js.html
+++ b/templates/react/js.html
@@ -1,14 +1,4 @@
-<script defer="defer" src="/static/js/main.a20183d1.js"></script>
-<!-- <script>
-    var path=window.location.pathname
-    var idRegex=/(?<tweetid>\d+)/
-    var match=path.match(idRegex)
-    if (match) {
-        var tweetId=match.groups.tweetid
-        var tweekerEl=document.getElementById("tweeker")
-        tweekerEl.className="d-none"
-        var tweetEl=`<div class="tweeker-detail" data-tweet-id=${tweetId} data-class-name="my-5 py-5 border bg-white text-dark"></div>`
-        var mainContainer=document.getElementById("tweet-container")
-        mainContainer.innerHTML=tweetEl
-        console.log(mainContainer)}
-</script> -->
+<script defer="defer" src="/static/js/main.de3380e7.js"></script>
+<script>
+    var path=window.location.pathname,idRegex=/(?<tweetid>\d+)/,match=path.match(idRegex);if(match){var tweetId=match.groups.tweetid,tweekerEl=document.getElementById("tweeker");tweekerEl.className="d-none";var tweetEl=`<div class="tweeker-detail" data-tweet-id=${tweetId} data-class-name="my-5 py-5 border bg-white text-dark"></div>`,mainContainer=document.getElementById("tweet-container");mainContainer.innerHTML=tweetEl,console.log(mainContainer)}
+</script>
