--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
+<nav class="navbar navbar-expand-lg navbar-dark mb-2" style="background-color: #332D2D;">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">Tweeker</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,24 +12,26 @@
             
             {% if request.user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link" href="/logout">Logout</a>
+                <!-- <a class="nav-link" href="/account/logout">Logout</a> -->
+                <a class="nav-link" href="{% url 'accounts:logout_view' %}">Logout</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/profile/edit">Edit</a>
+                <a class="nav-link" href="{% url 'profiles:user_update_profile_view' %}">Edit</a>
             </li>
             {% else %}
             <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
+                <a class="nav-link" href="{% url 'accounts:login_view' %}">Login</a>
+                <!-- <a class="nav-link" href="/account/login">Login</a> -->
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/register">Register</a>
+                <a class="nav-link" href="{% url 'accounts:register_view' %}">Register</a>
             </li>
             {% endif %}
         </ul>
-        <form class="d-flex" role="search">
+        <!-- <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        </form> -->
         </div>
     </div>
 </nav>
