--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -13,6 +13,10 @@
             {% if request.user.is_authenticated %}
             <li class="nav-item">
                 <!-- <a class="nav-link" href="/account/logout">Logout</a> -->
+                <a class="nav-link" href="{% url 'tweets:tweets_list_view' %}">All Tweets</a>
+            </li>
+            <li class="nav-item">
+                <!-- <a class="nav-link" href="/account/logout">Logout</a> -->
                 <a class="nav-link" href="{% url 'accounts:logout_view' %}">Logout</a>
             </li>
             <li class="nav-item">
