--- a/templates/base.html
+++ b/templates/base.html
@@ -4,12 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#000000"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <meta name="description" content="Web site created using django and react"/>
     <title>Tweeker</title>
+    <!-- include css styles -->
     {% include 'react/css.html' %}
+    <!-- include js scripts -->
+    {% include 'react/js.html' %}
+
   </head>
-  <body>
+  <body class="bg-dark">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     
     {% include 'components/navbar.html' %}
@@ -21,5 +24,4 @@
     
     {% include 'components/footer.html' %}
   </body>
-  {% include 'react/js.html' %}
 </html>
