--- a/templates/profiles/form.html
+++ b/templates/profiles/form.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-    <div class="col-10 col-md-4 mx-auto">
+    <div class="col-8 col-md-4 text-light mx-auto">
         <h1>{{ title }}</h1>    
         {% if description %}
             <p> {{description}} </p>
