--- a/templates/react/js.html
+++ b/templates/react/js.html
@@ -1,4 +1,2 @@
-<script defer="defer" src="/static/js/main.d0be9212.js"></script>
-<script>
-    var path=window.location.pathname,idRegex=/(?<tweetid>\d+)/,match=path.match(idRegex);if(match){var tweetId=match.groups.tweetid,tweekerEl=document.getElementById("tweeker");tweekerEl.className="d-none";var tweetEl=`<div class="tweeker-detail" data-tweet-id=${tweetId} data-class-name="my-5 py-5 border bg-white text-dark"></div>`,mainContainer=document.getElementById("tweet-container");mainContainer.innerHTML=tweetEl,console.log(mainContainer)}
-</script>
+<script defer="defer" src="/static/js/main.ae70f593.js"></script>
+<script>var path=window.location.pathname,idRegex=/(?<tweetid>\d+)/,match=path.match(idRegex);if(console.log(match),match){var tweetId=match.groups.tweetid,tweekerEl=document.getElementById("tweeker");tweekerEl.className="d-none";var tweetEl=`<div class="tweeker-detail" data-tweet-id=${tweetId} data-class-name="my-5 col-8 mx-auto col-md-6 py-5 bg-dark text-white"></div>`,mainContainer=document.getElementById("tweet-container");mainContainer.innerHTML=tweetEl}</script>
