--- a/templates/tweets/detail.html
+++ b/templates/tweets/detail.html
@@ -3,7 +3,8 @@
 
 {% block content %}
 <div 
-class="tweeker-detail" 
-data-tweet-id= {{tweet_id}} 
-data-class-name="my-5 py-5 border bg-white text-dark"></div>    
+    class="tweeker-detail" 
+    data-tweet-id= {{tweet_id}} 
+    data-class-name="my-5 col-8 mx-auto col-md-6 py-5 bg-dark text-white">
+</div>    
 {% endblock content %}
