update footer.html <github link>

--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -23,7 +23,7 @@
                     </a>
                     <!-- Github -->
                     <a class="btn btn-outline-secondary rounded-circle btn-sm text-white mx-1"
-                        href="https://github.com/LogicalErr"
+                        href="https://github.com/amirNourani"
                         target="_blank"
                         role="button"
                         data-mdb-ripple-color="dark">
