modified backend and frontend site of project

--- a/templates/profiles/detail.html
+++ b/templates/profiles/detail.html
@@ -1,11 +1,10 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
     <div class="tweeker-profile-badge" data-username="{{ username }}"></div>
-    <div 
-        id="tweeker" 
-        data-username="{{username}}" 
-        data-can-tweet="false">
-    </div>
+{#    <div#}
+{#        id="tweeker"#}
+{#        data-username="{{username}}"#}
+{#        data-can-tweet="false">#}
+{#    </div>#}
 {% endblock content %}
