--- a/templates/tweets/detail.html
+++ b/templates/tweets/detail.html
@@ -2,9 +2,6 @@
 
 
 {% block content %}
-<div 
-    class="tweeker-detail" 
-    data-tweet-id= {{tweet_id}} 
-    data-class-name="my-5 col-8 mx-auto col-md-6 py-5 bg-dark text-white">
-</div>    
+
+<div class="tweeker-detail" data-tweet-id={{ tweet_id }}></div>
 {% endblock content %}
