--- a/templates/tweets/list.html
+++ b/templates/tweets/list.html
@@ -2,5 +2,5 @@
 
 
 {% block content %}
-    <div id="tweeker"></div>
+    <div id="tweeker" data-can-tweet={{ can_tweet }}></div>
 {% endblock content %}
