--- a/templates/components/form.html
+++ b/templates/components/form.html
@@ -2,8 +2,8 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-success">
-        {% if btn_lable %} 
-            {{ btn_lable }} 
+        {% if btn_label %}
+            {{ btn_label }}
         {% else %} 
             Save
         {% endif %}
